fix: enhance projects and body overflow

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -25,6 +25,8 @@
 }
 
 body {
+  max-height: 100vh;
+  overflow-y: hidden;
   background-color: var(--primary-color);
   display: flex;
   background-color: #f9f5eb;
